--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,8 +1,8 @@
 <idea-plugin version="2">
-  <id>com.your.company.unique.plugin.id</id>
-  <name>Plugin display name here</name>
+  <id>com.senthil.codesearch</id>
+  <name>Code Search</name>
   <version>1.0</version>
-  <vendor email="support@yourcompany.com" url="http://www.yourcompany.com">YourCompany</vendor>
+  <vendor email="sen.mnnit@gmail.com" url="https://www.behance.net/salmabikutty">Senthil Kumar</vendor>
 
   <description><![CDATA[
       Codesearch plugin to search SearchCode server
